recursion.lessons.recursion.tree.Tree.scala.error
Tree:8: error: not found: value X1
X1=getX():Double
^Tree:9: error: not found: value X2
X2=getY():Double
^