recursion.lessons.recursion.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
	var X=0
	var Y=0
	avance(length:Double)
gauche(angle:Double)
avance(length*shrink)
X1=getX():Double
X2=getY():Double
tree(steps-1,length*shrink,angle/2,shrink*shrink)
}


